Sizing and spacing fixes in multiple places + hamburger icon

--- a/src/Contact/Contactformstyles.css
+++ b/src/Contact/Contactformstyles.css
@@ -36,7 +36,6 @@ body{
 }
 
 form{
-	margin-top: 8rem;
 	background-color: black;
 	background-size: cover;
 	height: 100vh;
